# os

./: .clang-tidy  .gitignore  LICENSE.md  meson.build  meson_options.txt
docs/: header.html
include/: asm.h  compiler.h
include/kernel/: kernel.h
include/kernel/api/: calls.h  calls.hpp
include/kernel/arch/: arch.hpp
include/kernel/arch/x86_64/: arch.hpp
include/klibc/: assert.h  ctype.h  stdio.h  stdlib.h  string.h
include/klibc/internal/: memcopy.hpp  printf.hpp
kernel/: main.cpp  meson.build
kernel/api/: writev.cpp
kernel/arch/x86_64/: meson.build
klibc/: ctype.cpp  meson.build
klibc/internal/: memcopy.cpp  meson.build  stdio_impl.cpp
klibc/stdio/: file.cpp  meson.build  printf.cpp  put.cpp  streams.cpp  vfprintf.cpp  vsnprintf.cpp
klibc/stdlib/: abort.cpp  abs.cpp  atou.cpp  div.cpp  meson.build  strtol.cpp  strtoll.cpp  strtoul.cpp  strtoull.cpp
klibc/string/: memcmp.cpp  memcpy.cpp  memmove.cpp  memset.cpp  meson.build  strcat.cpp  strcmp.cpp  strcpy.cpp  strlen.cpp
meson/analysis/clang-tidy/: clang-tidy.sh  meson.build
meson/analysis/cppcheck/: cppcheck.sh  meson.build
meson/compiler/: meson.build
meson/compiler/c/: meson.build
meson/compiler/check-and-apply-flags/: meson.build
meson/compiler/cpp/: meson.build
meson/cross/: clang-amd64.txt  gcc-amd64.txt
meson/docs/doxygen/: Doxyfile.in  meson.build
meson/emulation/: meson.build
meson/format/: .clang-format  format.sh  meson.build
meson/linker-scripts/: linker-amd64.ld
meson/linker/linker-map/: meson.build
meson/linker/linker-script-as-property/: meson.build
meson/objcopy/: meson.build
meson/package/: meson.build
meson/scripts/: limine.conf
meson/standard/: meson.build
subprojects/: doxygen-awesome-css.wrap  libstdcxx.wrap  limine.wrap  ovmf.wrap
subprojects/packagefiles/doxygen-awesome-css/: meson.build
subprojects/packagefiles/limine/: meson.build
subprojects/packagefiles/ovmf/: meson.build
